// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalSpinner #isActive 1`] = `
<div
  className="loading-mask loading"
>
  Test
</div>
`;

exports[`ModalSpinner renders 1`] = `
<div
  className="loading-mask"
>
  Test
</div>
`;
